# fuzzy-numbers

./: .gitignore  CMakeLists.txt  README.md
desc/: task.txt
example/: fuzzy_example.cc
src/: FuzzyNum.cpp  FuzzyNum.h  FuzzySet.cpp  FuzzySet.h  fuzzy_num.cc  fuzzy_num.h  fuzzy_set.cc  fuzzy_set.cpp  fuzzy_set.h  simple_test.cc
test/: num_test.cc  num_test.cpp  set_test.cpp  simple_test.cc
